--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@ nohup.out
 # non-standard output files
 /output/*.pdf
 /output/*.svg
+
+# don't save the archive files to the github
+# output/archive/*
