--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,10 @@
 
 # data files
 /data/*.grib
+/data/raw-forecasts/*
 
 # nohup from Roy runs
-nohup.out
+*.out
 
 # non-standard output files
 /output/*.pdf
