--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,5 @@
+- date: 30 September 2021
+  headline: "Fully working automatic updates pipeline is up and running!"
 
 - date: 13 July 2021
   headline: "First version of the AREAdata webpage is up!"
-
