--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,9 @@
+- date: 25 August 2023
+  headline: "Code pipeline updated to depend on new R packages, as support for rgdal is coming to an end."
+
+- date: 02 July 2022
+  headline: "AREAdata journal publication available online: https://doi.org/10.1016/j.dib.2022.108438"
+
 - date: 30 September 2021
   headline: "Fully working automatic updates pipeline is up and running!"
 
